Changed routing for about/intro page.

--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,7 @@
         </ion-side-menu>
     </ion-side-menus>
     <ion-footer-bar align-title="right" class="bar-dark" ng-hide="curState=='tour.intro'">
-        <button class="button button-icon button-clear ion-ios-information" ui-sref="tour.about" ng-hide="curState=='tour.error'"></button>
+        <button class="button button-icon button-clear ion-ios-information" ui-sref="tour.intro" ng-hide="curState=='tour.error'"></button>
         <img style="height: 100%; width: auto" class="center-img" src="img/public-art-collection-secondary-white.png"/>
     </ion-footer-bar>
 </body>
